@@ -38,16 +38,19 @@ CREATED="Created"
 CONTENT_CREATED_DATE="Create Date"
 CONTENT_MODIFIED_DATE="Modified Date"
 CONTENT_PUBLISHED_DATE="Published Date"
-CONTENT_CREATED_DATE="Created Date %s"
+CONTENT_CREATED_DATE="Created Date"
 CONTENT_AUTHOR_FILTER_LABEL="Author Filter"
 CONTENT_HITS_FILTER_LABEL="Hits Filter"
 CONTENT_TITLE_FILTER_LABEL="Title Filter"
 CONTENT_FILTER_SEARCH_DESC="Content Filter Search Desc"
+COM_CONTENT_CHILDREN="Subcategories"
+COM_CONTENT_DISPLAY_NUM="Display #"
+COM_CONTENT_NUM_ITEMS="Article Count:"
 JCONTENT_FILTER_LABEL="Filter"
 CONTENT_HEADING_TITLE="Title"
 DESCNEWITEMSFIRST="New Article defaults to the first position. Ordering can be changed after this Article has been saved."
 DESCRIPTION="Description"
-DISPLAY_NUM="Display #"
+DISPLAY_NUM="Display#"
 DOWN="Down"
 EDIT_IMAGE="Edit Image"
 EDIT_ITEM="Edit Article"
