@@ -31,6 +31,7 @@ $ -> Language fix or change
 # Fix PHP notice in mod_logged 
 ^ Change name of component parameter from show_page_title to show_page_heading
 # Fixed parameters in content views (Angie Radtke)
+# Make global content parameters consistent with layouts, fix language tags 
 
 20-Apr-2010 Andrew Eddie
  ^ Rename JModel _populateState to populateState, _getStoreId to getStoreId, _getListQuery to getListQuery.
